# aula19_bootcamp

./: README.md  main.py  pyproject.toml  test.db
